--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
             
             <li style="background-color: #fff0f5; text-align: center; padding: 25px; border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05); border: 2px solid #ffb3c1; flex-basis: 250px; transition: transform 0.3s ease, box-shadow 0.3s ease;">
                 <img src="https://i.pravatar.cc/100?u=fatim" alt="صورة فاطمة" style="width: 100px; height: 100px; border-radius: 50%; border: 3px solid #ff85a2; margin-bottom: 15px;">
-                <a href="#" style="text-decoration: none; color: #d9534f; font-weight: bold; font-size: 1.3em; display: block;"> خلود عبد الرحمن مكارم</a>
+                <a href="members/leader.html" style="text-decoration: none; color: #d9534f; font-weight: bold; font-size: 1.3em; display: block;"> خلود عبد الرحمن مكارم</a>
                 <p style="color: #888; font-size: 0.9em; margin-top: 5px;">قائدة الفريق</p>
             </li>
 
